fixed z-index of the profile in the corner

--- a/css/headerstyle.css
+++ b/css/headerstyle.css
@@ -196,7 +196,8 @@ min-width:344px;
 	max-width: 300px;
 	float: right;
 	display: inline;
-	
+	position: relative;
+    z-index: 1101;
 }
 
 .ipsUserPhoto_large {
